--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 .principal {
     background: #CCCCCC;
     text-align: center;
+    padding: 30px;
 }
 
 h1{
@@ -33,10 +34,18 @@ em strong{
 
 .beneficios{
     background-color: #FFFFFF;
+    padding: 20px;
 }
 
 h2{
     text-align: center;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
 }
 
 .imagemb{
