--- a/produtos.css
+++ b/produtos.css
@@ -27,6 +27,12 @@ nav a{
     text-decoration: none;
 }
 
+nav a:hover{
+    color: #dd9a15;
+    text-decoration: underline;
+
+}
+
 .produtos{
     width: 940px;
     margin: 0 auto;
@@ -41,9 +47,20 @@ nav a{
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border-color: #000000;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+
+.produtos li:hover{
+    border-color:#dd9a15;
+}
+
+.produtos li:active{
+    border-color: #088c19
+}
+
+.produtos li:hover h2 {
+    font-size: 34px;
 }
 
 .produtos h2{
@@ -59,4 +76,16 @@ nav a{
     font-size: 22px;
     font-weight: bold; 
     margin: 10px 0 0;   
+}
+
+footer{
+    text-align: center;
+    background: url(imagens/bg.jpg);
+    padding: 40px 0;
+}
+
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0 0;
 }
