--- a/style.css
+++ b/style.css
@@ -1,10 +1,41 @@
-
-#banner {
-    width: 100%;
+header{
+    background: #CCCCCC;
+    padding: 20px 0;
 }
 
-.tituloprincipal {
-    padding-left: 20px;
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #dd9a15;
+    text-decoration: underline;
+
+}
+
+#banner{
+    width: 100%;
 }
 
 .principal {
@@ -25,21 +56,20 @@ em strong {
     color: red;
 }
 
-.itens {
-    font-style: italic;
-}
 
 .beneficios {
     background-color: #FFFFFF;
     padding: 20px;
 }
 
-ul {
+.itens {
+    font-style: italic;
     display: inline-block;
     vertical-align: top;
     width: 20%;
     margin-right: 15%;
 }
+
 
 .imagemb {
     width: 50%;
