--- a/contato.css
+++ b/contato.css
@@ -38,6 +38,23 @@ main{
     margin: 0 auto;
 }
 
+form{
+    margin: 40px 0;
+}
+
+form label {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px 0;
+}
+
+form input{
+    display: block;
+    margin: 0 0 20px 0;
+    padding: 10px 10px;
+    width: 50%;
+}
+
 footer{
     text-align: center;
     background: url(imagens/bg.jpg);
