--- a/contato.css
+++ b/contato.css
@@ -42,17 +42,21 @@ form{
     margin: 40px 0;
 }
 
-form label {
+form label, form p {
     display: block;
     font-size: 20px;
     margin: 0 0 10px 0;
 }
 
-form input{
+.inputpadrao{
     display: block;
     margin: 0 0 20px 0;
     padding: 10px 10px;
     width: 50%;
+}
+
+.checkbox{
+    margin: 20px 0;
 }
 
 footer{
