--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* cabeçalho */
 
 header {
@@ -51,10 +56,13 @@ main {
     text-align: center;
     font-size: 2em;
     margin: 1em 0 1em 0;
+    clear: left;
 }
 
 .utensilios {
-    width: 150px;
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
 }
 
 .principal p {
@@ -69,8 +77,22 @@ main {
     font-style: italic;
 }
 
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
 .imagemb {
     width: 50%;
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
 }
 
 /* Css da pagina de produtos */
