--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ nav a:hover {
 /* Css da home */
 
 main {
-    width: 940px;
-    margin: 0 auto;
+
 }
 
 .banner {
@@ -55,7 +54,7 @@ main {
 .tituloprincipal {
     text-align: center;
     font-size: 2em;
-    margin: 1em 0 1em 0;
+    margin: 1em 0 ;
     clear: left;
 }
 
@@ -63,6 +62,13 @@ main {
     width: 120px;
     float: left;
     margin: 0 20px 20px 0;
+}
+
+.principal {
+    width: 940px;
+    margin: 0 auto;
+    padding: 3em 0;
+    background: #fefefe;
 }
 
 .principal p {
@@ -79,6 +85,7 @@ main {
 
 .mapa {
     padding: 3em 0;
+    background: linear-gradient(#fefefe,#888888);
 }
 
 .mapa p {
@@ -86,13 +93,42 @@ main {
     text-align: center;
 }
 
+.mapaconteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1,5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
 .imagemb {
-    width: 50%;
+    width: 60%;
 }
 
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
 }
 
 /* Css da pagina de produtos */
