--- a/style.css
+++ b/style.css
@@ -125,6 +125,13 @@ nav a:hover {
 
 .imagemb {
     width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagemb:hover {
+    opacity: 0.3;
 }
 
 .video {
