--- a/style.css
+++ b/style.css
@@ -261,3 +261,21 @@ footer {
     font-size: 13px;
     margin: 20px 0 0 0;
 }
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .mapaconteudo, .conteudo, .video{
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista, .imagemb {
+        width: 100%;
+    }
+}
